# Tetris

./: CMakeLists.txt  README.md
sycCore/: CMakeLists.txt
sycEditor/: CMakeLists.txt
